--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "myapp",
   "version": "1.0.0",
   "license": "MIT",
-  "dependencies": {
-    "color": "^1.0.3"
-  },
+  "dependencies": {},
   "scripts": {
-    "start": "node ."
+    "start": "babel-node src"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0"
   }
 }
