--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "babel-node src"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0"
+    "babel-cli": "^6.24.0",
+    "babel-preset-env": "^1.2.2"
   }
 }
