--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+  datastore:
+    image: busybox
+    volumes:
+      - node_modules:/myapp/node_modules
   main:
     container_name: base
     build:
@@ -10,3 +14,7 @@ services:
     volumes:
       - .:/myapp
     command: /bin/sh
+
+volumes:
+  node_modules:
+    driver: local
