--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,16 @@
 {
-    "extends": "airbnb",
-    "rules": {
-        "semi": [2, "never"],
-        "no-unexpected-multiline": 2
-    }
+  "extends": [
+    "airbnb",
+    "plugin:flowtype/recommended"
+  ],
+  "parser": "babel-eslint",
+  "plugins" : [
+    "flowtype",
+    "compat"
+  ],
+  "rules": {
+    "semi": [2, "never"],
+    "no-unexpected-multiline": 2,
+    "compat/compat": 2
+  }
 }
