--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
     "airbnb",
     "plugin:flowtype/recommended"
   ],
+  "env": {
+    "jest": true
+  },
   "parser": "babel-eslint",
   "plugins" : [
     "flowtype",
