--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.0",
+    "babel-jest": "^19.0.0",
     "babel-preset-env": "^1.2.2",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^3.18.0",
@@ -14,11 +15,13 @@
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "flow-bin": "^0.42.0",
+    "jest": "^19.0.2"
   },
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src && flow"
+    "test": "eslint src && flow && jest --coverage"
   },
   "browserlist": [
     "> 1%"
