Chap02 Introduce Husky

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "flow-bin": "^0.42.0",
+    "husky": "^0.13.2",
     "jest": "^19.0.2"
   },
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src && flow && jest --coverage"
+    "test": "eslint src && flow && jest --coverage",
+    "precommit": "dbin/yarn test",
+    "prepush": "dbin/yarn test"
   },
   "browserlist": [
     "> 1%"
