--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,11 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - 3000:3000
+      - 8000:8000
     volumes:
-      - dsync:/myapp
-    command: /bin/sh
+      - .:/myapp
+    command: yarn start
 
 volumes:
   node_modules:
     driver: local
-  dsync:
-    external: true
