--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,11 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - 8000:8000
+      - 7000:7000
     volumes:
-      - dsync:/myapp
+      - .:/myapp
     command: yarn start
 
 volumes:
   node_modules:
     driver: local
-  dsync:
-    external: true
