--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.15.2"
   },
@@ -10,6 +11,7 @@
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^19.0.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
     "babel-preset-flow": "^6.23.0",
     "cross-env": "^3.2.4",
@@ -25,17 +27,21 @@
     "jest": "^19.0.2",
     "nodemon": "^1.11.0",
     "pm2": "^2.4.2",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
     "start": "yarn dev:start",
-    "dev:start": "nodemon --ignore lib --exec babel-node src/server",
-    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "dev:start": "nodemon -L --ignore lib --exec babel-node src/server",
+    "dev:wds": "webpack-dev-server --host=0.0.0.0 --colors --progress",
+    "prod:build": "rimraf lib dist && babel src -d lib --ignore .test.js && NODE_ENV=production webpack -p --progress",
     "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
     "prod:stop": "pm2 delete server",
-    "test": "eslint src && flow && jest --coverage",
-    "precommit": "dbin/yarn test",
-    "prepush": "dbin/yarn test && dbin/yarn prod:build"
+    "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
+    "test": "yarn lint && flow && jest --coverage",
+    "precommit": "yarn test",
+    "prepush": "yarn test && yarn prod:build"
   },
   "browserlist": [
     "> 1%"
